--- a/src/main/resources/templates/update-jabatan.html
+++ b/src/main/resources/templates/update-jabatan.html
@@ -25,7 +25,7 @@
 	            	</div>
 	            	<div class="form-group">
 	            		<label for="gajiPokok">Gaji Pokok :</label>
-	            		<input type="number" name="gajiPokok" class="form-control" th:value="${jabatanArchived.gajiPokok}">
+	            		<input type="number" name="gajiPokok" class="form-control" th:value="${#numbers.formatInteger(jabatanArchived.gajiPokok, 0)}">
 	            	</div>
 	            	<div class="card-body">
 	                	<input type="submit" class="btn btn-primary" value="Simpan">
