--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
 							<form th:action="@{/pegawai}" method="GET">
 								<div class="form-group">
 									<label for="PegawaiNip">Masukkan NIP (Nomor Induk Pegawai):</label>
-									<input type="text" name="nip" class ="form-control"/> <br>
+									<input type="text" name="nip" class ="form-control"/>
 								</div>
 								<button type="submit" class="btn btn-primary">Lihat</button>
 							</form>							
@@ -74,6 +74,3 @@
 		</div>
 	</body>
 </html>
-
-
-
